--- a/package.json
+++ b/package.json
@@ -19,5 +19,14 @@
   "bugs": {
     "url": "https://github.com/SubhodI/hyperledger-sdk/issues"
   },
-  "homepage": "https://github.com/SubhodI/hyperledger-sdk#readme"
+  "homepage": "https://github.com/SubhodI/hyperledger-sdk#readme",
+  "dependencies": {
+    "body-parser": "^1.17.1",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.3",
+    "fabric-ca-client": "^1.0.0",
+    "fabric-client": "^1.0.0",
+    "fs-extra": "^2.0.0",
+    "log4js": "^0.6.38"
+  }
 }
