--- a/package.json
+++ b/package.json
@@ -14,6 +14,16 @@
     "blockchain",
     "hyperledger"
   ],
+   "engines": {
+    "node": ">=6.9.5",
+    "npm": ">=3.10.10"
+  },
+  "license": "Apache-2.0",
+  "dependencies": {
+    "fabric-ca-client": "^1.0.0",
+    "fabric-client": "^1.0.0",
+    "fs-extra": "^2.0.0",
+    },
   "author": "",
   "license": "ISC",
   "bugs": {
